--- a/style.css
+++ b/style.css
@@ -54,4 +54,44 @@ body {
     border-radius: 5px;
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+.toast i {
+    padding: 0 20px;
+    font-size: 30px;
+    color: green;
+}
+
+.toast.error i {
+    color: red;
+}
+
+.toast.invalid i {
+    color: orange;
+}
+
+.toast::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation: animation 3s linear forwards;
+}
+
+@keyframes animation {
+    100% {
+        width: 0;
+    }
+}
+
+.toast.error::after {
+    background: red;
+}
+
+.toast.invalid::after {
+    background: orange;
 }
