--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ body {
     margin-top: 10%;
 }
 
+.buttons h1 {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 35px;
+    
+}
+
 .buttons button {
     margin: 5px;
     background: #336c80;
